src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Award_Engagement_Levels_for_Org_Giving__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this contact should receive engagement &quot;credit&quot; for gifts made by their organizations.  Generally this is used for owners of small businesses who give via their business.</inlineHelpText>
        <label>Award Engagement Levels for Org&apos;s Giving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Since_First_Action_at_Level__c</fullName>
        <formula>TODAY() -  First_Action_Date_Curr_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days In Current Engagement Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Level_Before_First_Donation__c</fullName>
        <inlineHelpText>If this contact is a donor (and became a donor while Groundwire Engage was in use) this field will give the Engagement Level they had before becoming a donor.</inlineHelpText>
        <label>Engagement Level Before First Donation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Level_Change_Log__c</fullName>
        <description>Used by engagement metrics to compare year-over-year levels for a contact.  Should be hidden from end users.  Serialized JSON of a list of apex objects w/ two properties.  Date of change, and value changed to.</description>
        <label>Engagement Level Change Log</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engagement_Level_Numeric_After_Override__c</fullName>
        <formula>MAX (  Engagement_Level_Override_Numeric__c ,  Engagement_Level_Numeric__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engagement Level Numeric After Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Level_Numeric__c</fullName>
        <description>set automatically by batch process</description>
        <label>Engagement Level Numeric</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Level_One_Year_Ago__c</fullName>
        <inlineHelpText>The contact&apos;s numeric engagement level one year ago, used in metrics for comparing change over time.</inlineHelpText>
        <label>Engagement Level One Year Ago</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Level_Override_Numeric__c</fullName>
        <formula>VALUE(LEFT(TEXT(Engagement_Level_Override__c ),1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engagement Level Override Numeric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Level_Override__c</fullName>
        <inlineHelpText>This will increase the contact&apos;s engagement level, if this level is higher than what they would otherwise get based on their activity/donor history.  It cannot lower their level, only raise it.  It is effective until the override end date specified.</inlineHelpText>
        <label>Engagement Level Override</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Following</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Endorsing</fullName>
                <color>#FFCC66</color>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Contributing</fullName>
                <color>#FF9900</color>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Owning</fullName>
                <color>#FF6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Leading</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engagement_Level__c</fullName>
        <description>set by batch process</description>
        <inlineHelpText>Current engagement level, automatically calculated.  If you want to manually change the level, do not attempt to change this field.  Instead, enter a value in Engagement Level Override.</inlineHelpText>
        <label>Engagement Level</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Following</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Endorsing</fullName>
                <color>#FFCC33</color>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Contributing</fullName>
                <color>#FF9900</color>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Owning</fullName>
                <color>#FF6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Leading</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engagement_Levels_Below_Peak__c</fullName>
        <formula>Engagement_Level_Numeric__c - Engagement_Peak_Numeric__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Compares current and peak level, indicates how many levels they have fallen off their peak.  If 0, means peak and current level are the same.</inlineHelpText>
        <label>Engagement Levels Below Peak</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Lvl_Before_1st_Gift_Numeric__c</fullName>
        <formula>VALUE ( LEFT ( Engagement_Level_Before_First_Donation__c , 1 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engagement Lvl Before 1st Gift Numeric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Override_End_Date__c</fullName>
        <inlineHelpText>Override specified is effective until this date.</inlineHelpText>
        <label>Engagement Override End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engagement_Peak_Numeric__c</fullName>
        <description>set automatically by batch process</description>
        <label>Engagement Peak Numeric</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Peak__c</fullName>
        <inlineHelpText>The highest engagement level ever reached by this contact.

NOTE: This does not take into account any past overrides or formerly-checked checkboxes that affect engagement level.</inlineHelpText>
        <label>Engagement Peak</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Following</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Endorsing</fullName>
                <color>#FFCC66</color>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Contributing</fullName>
                <color>#FF9900</color>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Owning</fullName>
                <color>#FF6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Leading</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Action_Date_Curr_Level__c</fullName>
        <inlineHelpText>The date this contact moved into their current engagement level (whether up or down)</inlineHelpText>
        <label>In Engagement Level Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Donation_Date__c</fullName>
        <inlineHelpText>This field is used by Groundwire Engage to identify new donors.  If you are using Non Profit Starter Pack or GWBase, this value is obtained from one of those systems.</inlineHelpText>
        <label>First Donation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Engagement_Level_Date__c</fullName>
        <inlineHelpText>date the contact received their very first engagement level</inlineHelpText>
        <label>First Engagement Level Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Engagement_Level__c</fullName>
        <inlineHelpText>the very first engagement level received by this contact</inlineHelpText>
        <label>First Engagement Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Former_Engagement_Level_Numeric__c</fullName>
        <inlineHelpText>the previous engagement level for this contact, before they changed to their current level</inlineHelpText>
        <label>Former Engagement Level Numeric</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsDonor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by GW Engage to flag donors, in NPSP environment.  In GWBase environment, we use native GWBase field of same name.</description>
        <label>Donor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Engagement_Change__c</fullName>
        <formula>Engagement_Level_Numeric__c -  Former_Engagement_Level_Numeric__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gives the change in level that occurred the last time their level changed.  A positive number indicates their level rose, a negative indicates it fell.</inlineHelpText>
        <label>Last Engagement Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Engagement_Lvl_Chg_Datestamp__c</fullName>
        <inlineHelpText>date this contact&apos;s engagement level was last changed from one level to another</inlineHelpText>
        <label>Last Engagement Lvl Chg Datestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Leadership_Action_Date__c</fullName>
        <inlineHelpText>Date of most recent action taken (may include donations if your org includes that in Engagement Level calculations)</inlineHelpText>
        <label>Last Engagement Action Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>All_Highly_Engaged_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Engagement_Level__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Engagement_Level_Numeric__c</field>
            <operation>greaterOrEqual</operation>
            <value>4</value>
        </filters>
        <label>All Highly Engaged Contacts</label>
    </listViews>
    <listViews>
        <fullName>Cons_w_Engagement</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Engagement_Level__c</columns>
        <columns>Engagement_Level_Numeric__c</columns>
        <columns>Engagement_Level_Override__c</columns>
        <columns>Engagement_Peak__c</columns>
        <columns>Engagement_Level_One_Year_Ago__c</columns>
        <columns>First_Engagement_Level__c</columns>
        <columns>First_Engagement_Level_Date__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Cons w Engagement</label>
    </listViews>
    <listViews>
        <fullName>Cons_w_Engagement_0</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Engagement_Level__c</columns>
        <columns>Engagement_Level_Numeric__c</columns>
        <columns>Engagement_Peak__c</columns>
        <columns>First_Engagement_Level__c</columns>
        <columns>First_Engagement_Level_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Engagement_Level_Numeric__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Cons w Engagement &gt; 0</label>
    </listViews>
    <listViews>
        <fullName>Contacts_Moved_Up_Level_This_Week</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Engagement_Level__c</columns>
        <columns>Engagement_Peak__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Last_Leadership_Action_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Last_Leadership_Action_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>Last_Engagement_Change__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>ENGAGE:Contacts Moved Up Level This Week</label>
    </listViews>
    <listViews>
        <fullName>My_High_Level_Supporters</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Engagement_Level__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Engagement_Level_Numeric__c</field>
            <operation>greaterOrEqual</operation>
            <value>4</value>
        </filters>
        <label>My Highly Engaged Contacts</label>
    </listViews>
</CustomObject>